--- a/oauth-server/src/main/resources/static/index.html
+++ b/oauth-server/src/main/resources/static/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <meta name="Keywords" content="云书签"/>
-    <meta name="Description" content="云书签"/>
+    <meta name="Keywords" content="云书签" />
+    <meta name="Description" content="云书签" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="icon" href="/static/img/icon.png" type="image/x-icon">
@@ -11,15 +12,24 @@
     <script src="/static/js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
     <title>登录</title>
     <style>
-        html,body{
+        html,
+        body {
             padding: 0;
             margin: 0;
             width: 100%;
             height: 100%;
         }
+
         .container {
             height: 100%;
             background-image: linear-gradient(to right, #fbc2eb, #a6c1ee);
+        }
+
+        .login-frame {
+            padding: 50px;
+            width: 358px;
+            height: 588px;
+            margin: 0 auto;
         }
 
         .login-wrapper {
@@ -28,11 +38,245 @@
             height: 588px;
             border-radius: 15px;
             padding: 0 50px;
-            position: relative;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
+            animation: Frame 1s;
+            -webkit-animation: Frame 1s;
+            -moz-animation: Frame 1s;
+            -o-animation: Frame 1s;
         }
+
+        .shadow {
+            background: rgba(255, 255, 255, 0.5);
+            border-radius: 10px;
+            -webkit-border-radius: 10px;
+            -moz-border-radius: 10px;
+            -webkit-box-shadow: 0 2px 6px rgba(68, 68, 68, 0.6);
+            -moz-box-shadow: 0 2px 6px rgba(68, 68, 68, 0.6);
+            box-shadow: 0 2px 6px rgba(68, 68, 68, 0.6);
+        }
+
+        .shadow:hover {
+            -webkit-box-shadow: 0 2px 6px rgba(0, 143, 255, 0.6);
+            -moz-box-shadow: 0 2px 6px rgba(0, 143, 255, 0.6);
+            box-shadow: 0 2px 6px rgba(0, 143, 255, 0.6);
+        }
+
+        @keyframes Frame {
+            0% {
+                opacity: 0;
+                transform: perspective(2500px) rotateY(-360deg) scale(1.5) translate(300px, 0);
+            }
+
+            100% {
+                opacity: 1;
+                transform: perspective(2500px) rotateY(0deg) scale(1) translate(0, 0);
+            }
+        }
+
+        @-webkit-keyframes Frame {
+            0% {
+                opacity: 0;
+                -webkit-transform: perspective(2500px) rotateY(-360deg) scale(1.5) translate(300px, 0);
+            }
+
+            100% {
+                opacity: 1;
+                -webkit-transform: perspective(2500px) rotateY(0deg) scale(1) translate(0, 0);
+            }
+        }
+
+        @-moz-keyframes Frame {
+            0% {
+                opacity: 0;
+                -moz-transform: perspective(2500px) rotateY(-360deg) scale(1.5) translate(300px, 0);
+            }
+
+            100% {
+                opacity: 1;
+                -moz-transform: perspective(2500px) rotateY(0deg) scale(1) translate(0, 0);
+            }
+        }
+
+        @-o-keyframes Frame {
+            0% {
+                opacity: 0;
+                -o-transform: perspective(2500px) rotateY(-360deg) scale(1.5) translate(300px, 0);
+            }
+
+            100% {
+                opacity: 1;
+                -o-transform: perspective(2500px) rotateY(0deg) scale(1) translate(0, 0);
+            }
+        }
+
+        /*主体框架载入后连续动画*/
+        .frame_turn {
+            animation: frame_turn 10s infinite;
+            -webkit-animation: frame_turn 10s infinite;
+            -moz-animation: frame_turn 10s infinite;
+            -o-animation: frame_turn 10s infinite;
+        }
+
+        @keyframes frame_turn {
+            0% {
+                transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+
+            50% {
+                transform: matrix3d(1, 0, 0, 0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(-0.5deg);
+            }
+
+            100% {
+                transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+        }
+
+        @-webkit-keyframes frame_turn {
+            0% {
+                -webkit-transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+
+            50% {
+                -webkit-transform: matrix3d(1, 0, 0, 0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(-0.5deg);
+            }
+
+            100% {
+                -webkit-transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+        }
+
+        @-moz-keyframes frame_turn {
+            0% {
+                -moz-transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+
+            50% {
+                -moz-transform: matrix3d(1, 0, 0, 0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(-0.5deg);
+            }
+
+            100% {
+                -moz-transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+        }
+
+        @-o-keyframes frame_turn {
+            0% {
+                -o-transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+
+            50% {
+                -o-transform: matrix3d(1, 0, 0, 0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(-0.5deg);
+            }
+
+            100% {
+                -o-transform: matrix3d(1, 0, 0, -0.00008, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1) rotate(0.5deg);
+            }
+        }
+
+        /*滚动背景*/
+        body {
+            background: url('https://www.acgft.club/img/background.png') repeat;
+            -webkit-animation: Scroll_background 40s linear infinite;
+            /*-moz-animation: Scroll_background 40s linear infinite;*/
+            -ms-animation: Scroll_background 40s linear infinite;
+            /*-o-animation: Scroll_background 40s linear infinite;
+animation: Scroll_background 40s linear infinite;*/
+        }
+
+        @-webkit-keyframes Scroll_background {
+            from {
+                background-position: 1662px 100%;
+            }
+
+            to {
+                background-position: 0 100%;
+            }
+        }
+
+        @-moz-keyframes Scroll_background {
+            from {
+                background-position: 1662px 100%;
+            }
+
+            to {
+                background-position: 0 100%;
+            }
+        }
+
+        @-ms-keyframes Scroll_background {
+            from {
+                background-position: 1662px 100%;
+            }
+
+            to {
+                background-position: 0 100%;
+            }
+        }
+
+        @-o-keyframes Scroll_background {
+            from {
+                background-position: 1662px 100%;
+            }
+
+            to {
+                background-position: 0 100%;
+            }
+        }
+
+        .Frame_exit {
+            animation: Frame_exit 1s;
+            -webkit-animation: Frame_exit 1s;
+            -moz-animation: Frame_exit 1;
+            -o-animation: Frame_exit 1s;
+        }
+
+        @keyframes Frame_exit {
+            0% {
+                opacity: 1;
+                transform: perspective(2500px) rotateX(0deg) scale(1);
+            }
+
+            100% {
+                opacity: 1;
+                transform: perspective(2500px) rotateX(360deg) scale(1);
+            }
+        }
+
+        @-webkit-keyframes Frame_exit {
+            0% {
+                opacity: 1;
+                -webkit-transform: perspective(2500px) rotateX(0deg) scale(1);
+            }
+
+            100% {
+                opacity: 1;
+                -webkit-transform: perspective(2500px) rotateX(360deg) scale(1);
+            }
+        }
+
+        @-moz-keyframes Frame_exit {
+            0% {
+                opacity: 1;
+                -moz-transform: perspective(2500px) rotateX(0deg) scale(1);
+            }
+
+            100% {
+                opacity: 1;
+                -moz-transform: perspective(2500px) rotateX(360deg) scale(1);
+            }
+        }
+
+        @-o-keyframes Frame_exit {
+            0% {
+                opacity: 1;
+                -o-transform: perspective(2500px) rotateX(0deg) scale(1);
+            }
+
+            100% {
+                opacity: 1;
+                -o-transform: perspective(2500px) rotateX(360deg) scale(1);
+            }
+        }
+
 
         .header {
             font-size: 38px;
@@ -64,6 +308,7 @@
             background-image: linear-gradient(to right, #a6c1ee, #fbc2eb);
             color: #fff;
         }
+
         .pointer {
             cursor: pointer;
         }
@@ -84,113 +329,117 @@
         }
     </style>
 </head>
+
 <body>
-<div class="container">
-    <div class="login-wrapper">
-        <div class="header">登录</div>
-        <div class="form-wrapper">
-            <input type="text" name="username" placeholder="用户名" class="input-item">
-            <input type="password" name="password" placeholder="密码" class="input-item">
-            <div><img alt="验证码" id="captchaImg" src="/captcha" onclick="refreshImg()"></div>
-            <input type="text" name="captcha" placeholder="验证码" class="input-item">
-            <div class="btn pointer" onclick="login()">登录</div>
+    <div class="container">
+        <div class="login-frame frame_turn">
+            <div class="login-wrapper shadow">
+                <div class="header">登录</div>
+                <div class="form-wrapper">
+                    <input type="text" name="username" placeholder="用户名" class="input-item">
+                    <input type="password" name="password" placeholder="密码" class="input-item">
+                    <div><img alt="验证码" id="captchaImg" src="/captcha" onclick="refreshImg()"></div>
+                    <input type="text" name="captcha" placeholder="验证码" class="input-item">
+                    <div class="btn pointer" onclick="login()">登录</div>
+                </div>
+                <div class="msg">
+                    <p>Don't have account?
+                        <a href="#">Sign up</a>
+                    </p>
+                </div>
+                <div id="errorMsg"></div>
+            </div>
         </div>
-        <div class="msg">
-            <p>Don't have account?
-                <a href="#">Sign up</a>
-            </p>
-        </div>
-        <div id="errorMsg"></div>
     </div>
-</div>
 
-<script>
-let clientId
-let redirectUri
-$(function () {
-    clientId = getQueryString('clientId')
-    redirectUri = getQueryString('redirect')
-    if(!clientId||!redirectUri) {
-        $('#errorMsg').html('授权参数有误')
-        $('[name="username"]').attr('disabled',true)
-        $('[name="password"]').attr('disabled',true)
-        $('[name="captcha"]').attr('disabled',true)
-        doing = true
-    }
-
-})
-var doing= false
-function refreshImg() {
-    let num = Math.ceil(Math.random() * 1000)
-    let captchaUrlTmp = $('#captchaImg').attr('src').split('?')[0]
-    let captchaUrl = [captchaUrlTmp, 'code=' + num].join('?')
-    $('#captchaImg').attr('src',captchaUrl)
-    $('[name="captcha"]').val('')
-}
-
-function login(){
-    if (doing) {
-        return
-      }
-    let errorMsg = $('#errorMsg')
-    errorMsg.html('')
-    let username=$('[name="username"]').val()
-    let password=$('[name="password"]').val()
-    let captcha=$('[name="captcha"]').val()
-    if (!username) {
-        errorMsg.html('请输入用户名')
-        return;
-    }
-    if (!password) {
-        errorMsg.html('请输入密码')
-        return;
-    }
-    if (!captcha) {
-        errorMsg.html('请输入验证码')
-        return;
-    }
-    doing = true
-    $.ajax({
-        url: '/login',
-        type: 'post',
-        contentType: 'application/x-www-form-urlencoded',
-        data: {
-            username: username,
-            password: password,
-            captcha: captcha,
-            type: 'PASSWORD',
-            clientId: clientId,
-            redirectUri: redirectUri
-        },
-        success: function(res) {
-            console.log('登录成功,跳转认证地址')
-            doing = false
-            if (res.code === 200) {
-                window.location = res.data.authorizeUrl
-            } else {
-                $('#errorMsg').html(res.msg)
-                refreshImg()
+    <script>
+        let clientId
+        let redirectUri
+        $(function () {
+            clientId = getQueryString('clientId')
+            redirectUri = getQueryString('redirect')
+            if (!clientId || !redirectUri) {
+                $('#errorMsg').html('授权参数有误')
+                $('[name="username"]').attr('disabled', true)
+                $('[name="password"]').attr('disabled', true)
+                $('[name="captcha"]').attr('disabled', true)
+                doing = true
             }
-        },
-        error: function() {
-            doing = false
-            $('#errorMsg').html('请求异常')
-            refreshImg()
-        }
-    })
 
-}
-/**
- * 获取url参数
- **/
-function getQueryString (name) {
-  const reg = new RegExp('(^|&)' + name + '=([^&]*)(&|$)')
-  const r = window.location.search.substr(1).match(reg)
-  if (r != null) {
-    return unescape(r[2])
-  }
-  return ''
-}
-</script>
+        })
+        var doing = false
+        function refreshImg() {
+            let num = Math.ceil(Math.random() * 1000)
+            let captchaUrlTmp = $('#captchaImg').attr('src').split('?')[0]
+            let captchaUrl = [captchaUrlTmp, 'code=' + num].join('?')
+            $('#captchaImg').attr('src', captchaUrl)
+            $('[name="captcha"]').val('')
+        }
+
+        function login() {
+            if (doing) {
+                return
+            }
+            let errorMsg = $('#errorMsg')
+            errorMsg.html('')
+            let username = $('[name="username"]').val()
+            let password = $('[name="password"]').val()
+            let captcha = $('[name="captcha"]').val()
+            if (!username) {
+                errorMsg.html('请输入用户名')
+                return;
+            }
+            if (!password) {
+                errorMsg.html('请输入密码')
+                return;
+            }
+            if (!captcha) {
+                errorMsg.html('请输入验证码')
+                return;
+            }
+            doing = true
+            $.ajax({
+                url: '/login',
+                type: 'post',
+                contentType: 'application/x-www-form-urlencoded',
+                data: {
+                    username: username,
+                    password: password,
+                    captcha: captcha,
+                    type: 'PASSWORD',
+                    clientId: clientId,
+                    redirectUri: redirectUri
+                },
+                success: function (res) {
+                    console.log('登录成功,跳转认证地址')
+                    doing = false
+                    if (res.code === 200) {
+                        window.location = res.data.authorizeUrl
+                    } else {
+                        $('#errorMsg').html(res.msg)
+                        refreshImg()
+                    }
+                },
+                error: function () {
+                    doing = false
+                    $('#errorMsg').html('请求异常')
+                    refreshImg()
+                }
+            })
+
+        }
+        /**
+         * 获取url参数
+         **/
+        function getQueryString(name) {
+            const reg = new RegExp('(^|&)' + name + '=([^&]*)(&|$)')
+            const r = window.location.search.substr(1).match(reg)
+            if (r != null) {
+                return unescape(r[2])
+            }
+            return ''
+        }
+    </script>
 </body>
+
 </html>
