--- a/oauth-server/src/main/resources/static/index.html
+++ b/oauth-server/src/main/resources/static/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="Keywords" content="云书签" />
-    <meta name="Description" content="云书签" />
+    <meta name="Keywords" content="统一登陆" />
+    <meta name="Description" content="统一登录" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="icon" href="/static/img/icon.png" type="image/x-icon">
