--- a/oauth-server/src/main/resources/static/index.html
+++ b/oauth-server/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="/static/img/icon.png" type="image/x-icon">
     <link rel="shortcut icon" href="/static/img/icon.png" type="image/x-icon">
     <script src="/static/js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="/static/css/custom.css" type="text/css">
     <title>登录</title>
 </head>
@@ -26,10 +27,15 @@
                 <input type="text" name="captcha" placeholder="验证码" class="input-item">
                 <div class="btn pointer btn-login">登录</div>
             </div>
+            <ul class="social-account">
+                <li><i class="fa fa-github fa-2x"></i></li>
+                <li><i class="fa fa-weixin fa-2x"></i></li>
+                <li><i class="fa fa-qq fa-2x"></i></li>
+                <li><i class="fa fa-weibo fa-2x"></i></li>
+                <li><i class="fa fa-google fa-2x"></i></li>
+            </ul>
             <div class="msg">
-                <p>Don't have account?
-                    <a href="#">Sign up</a>
-                </p>
+                <a href="#">注册账号</a>
             </div>
             <div id="errorMsg"></div>
         </div>
