--- a/oauth-server/src/main/resources/static/index.html
+++ b/oauth-server/src/main/resources/static/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="/static/img/icon.png" type="image/x-icon">
     <link rel="shortcut icon" href="/static/img/icon.png" type="image/x-icon">
     <script src="/static/js/jquery-3.4.1/jquery-3.4.1.min.js"></script>
+    <script src="/static/js/layer/layer.js"></script>
     <link rel="stylesheet" href="/static/css/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="/static/css/custom.css" type="text/css">
     <title>登录</title>
@@ -20,18 +21,30 @@
     <div class="login-frame frame_turn">
         <div class="login-wrapper shadow">
             <div class="header">登录</div>
-            <div class="form-wrapper">
+            <div class="to-user-login">
+                <i class="fa fa-arrow-left fa-2x"></i>
+            </div>
+            <!--账号密码登录-->
+            <div class="username-login">
                 <input type="text" name="username" placeholder="用户名" class="input-item">
                 <input type="password" name="password" placeholder="密码" class="input-item">
                 <div><img alt="验证码" id="captchaImg" src="/captcha" onclick="refreshImg()"></div>
                 <input type="text" name="captcha" placeholder="验证码" class="input-item">
                 <div class="btn pointer btn-login">登录</div>
             </div>
+            <!--短信登录-->
+            <div class="smg-login">
+                <input type="text" name="phoneNumber" placeholder="手机号" class="input-item">
+                <div class="verification-code-wrap">
+                    <input type="text" name="verificationCode" placeholder="验证码" class="input-item verification-code">
+                    <div class="btn pointer btn-get-verification-code">获取验证码</div>
+                </div>
+                <div class="btn pointer btn-smg-login">登录</div>
+            </div>
             <ul class="social-account">
                 <li><i class="fa fa-github fa-2x"></i></li>
                 <li><i class="fa fa-weixin fa-2x"></i></li>
                 <li><i class="fa fa-qq fa-2x"></i></li>
-                <li><i class="fa fa-google fa-2x"></i></li>
                 <li>
                     <svg t="1711373813055" class="icon" viewBox="0 0 1413 1024" version="1.1"
                          xmlns="http://www.w3.org/2000/svg" p-id="1776"
@@ -48,6 +61,7 @@
                               p-id="1599"></path>
                     </svg>
                 </li>
+                <li class="smg"><i class="fa fa-mobile fa-3x"></i></li>
             </ul>
             <div class="msg">
                 <a href="#">注册账号</a>
@@ -73,8 +87,25 @@
 
         $('.btn-login').click(login)
 
-        autoPosition()
+        /**
+         * 切换到短信登录
+         */
+        $('.smg').click(function () {
+            $('.to-user-login').show()
+            $('.smg-login').show()
+            $('.username-login').hide()
+        })
 
+        /**
+         * 切换到用户密码登录
+         */
+        $('.to-user-login').click(function () {
+            $('.to-user-login').hide()
+            $('.smg-login').hide()
+            $('.username-login').show()
+        })
+
+        autoPosition()
         $(window).resize(autoPosition)
     })
 
@@ -100,6 +131,7 @@
         $('[name="captcha"]').val('')
     }
 
+    //用户名密码登录
     function login() {
         if (doing) {
             return
