判断是否为数字

--- a/oauth-server/src/main/resources/static/index.html
+++ b/oauth-server/src/main/resources/static/index.html
@@ -231,7 +231,7 @@
                     timer = setInterval(function () {
                         let val = $('.btn-get-verification-code').html()
                         let number = parseInt(val)
-                        if (number) {
+                        if (!isNaN(number)) {
                             number = number - 1
                             if (number < 0) {
                                 clearInterval(timer)
